fix: z-index of overlay, navbar, buttons

--- a/assets/style.css
+++ b/assets/style.css
@@ -11,6 +11,7 @@
     border-radius: 30%;
     margin: 2%;
     cursor: pointer;
+    z-index: 4;
 }
 
 /* Navbar styles */
@@ -18,7 +19,7 @@
     height: 100%;
     width: 0;
     position: fixed;
-    z-index: 1;
+    z-index: 3;
     top: 0;
     left: 0;
     background-color: #111;
